test/arrays/errors/initRectArrFromAssocDom.chpl
var arr2: [0..3] int = {0, 1, 2, 3};
