test/arrays/errors/initRectArrFromAssocDom.good
initRectArrFromAssocDom.chpl:1: error: cannot assign to rectangular arrays from associative domains
